deploy_librespeed_rebrainme.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: final
spec:
  finalizers:
  - kubernetes
status:
  phase: Active

---
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/instance: librespeed
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed-ingress
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: 51.250.38.29.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: librespeed
            port:
              number: 80


#---
#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: librespeed-pv
#  namespace: final
#spec:
#  capacity:
#    storage: 250Mi
#  accessModes:
#    - ReadWriteOnce
#  hostPath:
#    path: "/opt/librespeed"

#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: librespeed-pv-claim
#  namespace: final
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 250Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: librespeed
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: librespeed
    spec:
      imagePullSecrets:
        - name: registrysecret
      containers:
        - name: speedtest
          image: registry.rebrainme.com/workshops/middle/kubernetes-local/newplatform_autochecks/speedtest:5.3
#          image: wordpress:6.0.2-apache # latest: wordpress:4.9-php7.2-apache
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /servers.json
              subPath: servers.json
      volumes:
        - name: config-volume
          configMap:
            name: librespeed-servers
